--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -399,3 +399,39 @@
 	author = {Pahl, Claus and Gunduz, Niyazi Gokberk and Sezen, Ovgum Can and Ghamgosar, Ali and Ioini, Nabil El},
 	file = {PDF:/Users/rasztabigab/Zotero/storage/JCXHY7J2/Pahl et al. - Infrastructure as Code – Technology Review and Research Challenges.pdf:application/pdf},
 }
+
+@misc{docker_genai,
+	title = {How to {Create} {Dockerfiles} with {GenAI}},
+	url = {https://www.docker.com/blog/how-to-create-dockerfiles-with-genai/},
+	language = {en},
+	urldate = {2025-04-25},
+	author = {{Docker Labs}},
+}
+
+@misc{checkov,
+	title = {Dokumentacja skanera {Checkov}},
+	url = {https://www.checkov.io/1.Welcome/What%20is%20Checkov.html},
+	language = {en},
+	urldate = {2025-04-26}
+}
+
+@misc{kubelinter,
+	title = {Dokumentacja skanera {Kubelinter}},
+	url = {https://docs.kubelinter.io/},
+	language = {en},
+	urldate = {2025-04-26}
+}
+
+@misc{terrascan,
+	title = {Dokumentacja skanera {Terrascan}},
+	url = {https://runterrascan.io/docs/},
+	language = {en},
+	urldate = {2025-04-26}
+}
+
+@misc{cwetop25,
+	title = {Lista najbardziej krytycznych luk bezpieczeństwa w oprogramowaniu - {CWE} {Top} 25},
+	url = {https://cwe.mitre.org/top25/},
+	language = {en},
+	urldate = {2025-04-26}
+}
