--- a/docs/main.tex
+++ b/docs/main.tex
@@ -106,9 +106,9 @@ A series of tests was conducted to evaluate the models’ accuracy, compliance w
 
 \input{tex/1-wprowadzenie}
 \input{tex/2-przeglad-literatury}
-% \input{tex/3-przeglad-technologii-i-narzedzi}
-% \input{tex/4-eksperymenty}
-% \input{tex/5-analiza-porownawcza}
+\input{tex/3-przeglad-narzedzi}
+\input{tex/4-projekt-eksperymentow}
+\input{tex/5-analiza-porownawcza}
 % \input{tex/6-bezpieczenstwo}
 % \input{tex/7-projekt-systemu}
 % \input{tex/8-implementacja}
